# geometry

./: .gitignore  README.md
geometry/: CMakeLists.txt  graph.cpp  graph.h  main.cpp  mathmind.cpp  mathmind.h  mathmind.ui  mkdocs.yml
geometry/doc/: mkdocs.yml  requirements.txt
geometry/doc/docs/: index.md
geometry/doc/docs/guide/: history.md  space.md
geometry/doc/docs/guide/logic/: axioms.md
geometry/doc/docs/guide/space/: lines.md
geometry/src/: CMakeLists.txt  graph.cpp  main.cpp  mathmind.cpp  mathmind.h  toolbar.cpp  toolbar.h  window.cpp  window.h  window.ui
geometry/tests/: CMakeLists.txt  test_main.cpp
